# AnalyzerBaseOnSVF

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Grammar  TaintChecker分析器详解.md  TaintChecker分析过程.md  build.sh  compile.sh  index.html.1  just_pull.sh  just_push.sh  setup.sh  svfg_final.dot  开发计划.md  抽象解释使用方式.md  构建指导.md
examples/: CMakeLists.txt  PDGDemo.cpp  ae_result  callgraph_final.dot  callgraph_initial.dot  cat.ll  codechecker_config.json  consCG_final.dot  consCG_initial.dot  data_dep.c  data_dep.ll  example.ll  fs_solved.dot  icfg_final.dot  icfg_initial.dot  memcpy.c  memcpy.ll  read_write.c  read_write.ll  read_write_pdg.another_transform.dot  read_write_pdg.fclose.dot  read_write_pdg.fopen.dot  read_write_pdg.fread.dot  read_write_pdg.fwrite.dot  read_write_pdg.get_buffer.dot  read_write_pdg.get_buffer2.dot  read_write_pdg.main.dot  read_write_pdg.malloc.dot  read_write_pdg.memcpy.dot  read_write_pdg.printf_va_1.dot  read_write_pdg.printf_va_2.dot  read_write_pdg.transform.dot  resource_val_var.yaml  resourcevar-config.yaml  resourcevar-print.yaml  sliced.c  sqlite3.ll  svfg_final.dot  svfir_final.dot  svfir_initial.dot  (+8 more)
examples/read_write.plist/: report-1b8f5c.html  report-5c9de7.html  report-74100a.html  report-87c9d6.html  report-9271e1.html  report-b3e330.html  report-c0fbd2.html
sdemoservice/: BUILD.gn  build.sh  bundle.json  i_sdemo_service.ll  readme.md  str_para.ll  str_para2.ll  tmp_result  vars_building_tree.dot  vars_building_tree_fopen_1.dot
sdemoservice/etc/: BUILD.gn  sdemo_service.cfg
sdemoservice/include/: sdemo_inner_api.h  sdemo_service.h  sdemo_service_proxy.h  sdemo_service_stub.h
sdemoservice/interface/: i_sdemo_service.h
sdemoservice/ll/: ae_result  i_sdemo_service.ll  i_sdemo_service1.ll  mssa_result2  resourcevar-config copy.yaml  resourcevar-config.yaml  sdemo_service.ll  sdemo_service_stub.ll  sdemoservice_linked.ll  taint-config.yaml  tmp_result  tmp_result2
sdemoservice/ll/1/: i_sdemo_service.ll  sdemo_service.ll  sdemo_service_stub.ll  sdmo.ll  tmp.ll
sdemoservice/sa_profile/: 18888.json  BUILD.gn
sdemoservice/src/: i_sdemo_service.cpp  i_sdemo_service_without_oh.cpp  sdemo_client.cpp  sdemo_service.cpp  sdemo_service_proxy.cpp  sdemo_service_stub.cpp
svf/: CMakeLists.txt
svf-llvm/tools/SABER/: CMakeLists.txt  saber.cpp
svf/include/AE/Core/: AbstractState.h
svf/include/AE/Svfexe/: AbstractInterpretation.h
svf/include/CFL/: CFLGraphBuilder.h
svf/include/CFL/grammar/: SELinuxGrammer.txt
svf/include/Graphs/: ICFG.h  ICFGNode.h  VFGNode.h
svf/include/ProgramBehaviorConfirmer/: InfoFlowConfirmer.h  InfoFlowNodeFinder.h  InfoNode.h  ObjectType.h  ResourceFuncClassifier.h  infoFlow.h
svf/include/ProgramBehaviorConfirmer/CallFinder/: BinderCallFinder.h  CallFinderBase.h  CallFinderFactory.h  FileCallFinder.h  SocketCallFinder.h
svf/include/ProgramBehaviorConfirmer/LiteTaintChecker/: LiteTaintChecker.h
svf/include/SABER/: SaberCheckerAPI.h  SrcSnkDDA.h  TaintChecker.h
svf/include/SVFIR/: SVFType.h  SVFValue.h
svf/include/Util/: DPItem.h  GraphReachSolver.h  Options.h
svf/include/VarsBuildingTreeGenerator/: AnalysisGraphManager.h  CallStack.h  DataFlowAnalysisExample.h  ICFG_CFL_Walker.h  OpenReadWriteFuncInfo.h  Readme.md  ResourcesOpenArgumentAnalyzer.h  VarsBuildingTreeGenerator.h
svf/include/VarsBuildingTreeGenerator/BuildingTreeToRegularExpression/: BuildingTreeToRegularExpression.h
svf/include/VarsBuildingTreeGenerator/DataFlowAnalysisEngine/: DataFlowAnalysisEngine.h
svf/include/VarsBuildingTreeGenerator/DefUseParser/: AddrVFGNodeFinder.h  DefUseParser.h  (+1 more)
svf/include/WPA/: Andersen.h
svf/lib/CFL/: CFLBase.cpp  CFLGraphBuilder.cpp
svf/lib/Graphs/: SVFG.cpp
svf/lib/SABER/: SaberCheckerAPI.cpp  SaberSVFGBuilder.cpp  SrcSnkDDA.cpp  TaintChecker.cpp
svf/lib/Util/: Options.cpp
svf/lib/VarsBuildingTreeGenerator/: CallStack.cpp  ICFG_CFL_Walker.cpp  ResourcesOpenArgumentAnalyzer.cpp  VarsBuildingTreeGenerator.cpp
(+44 files in other folders)
